--- a/frontend/translations/ru.po
+++ b/frontend/translations/ru.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "PO-Revision-Date: 2023-02-10 21:35+0000\n"
 "Last-Translator: Vin <k3kelm4vw@mozmail.com>\n"
-"Language-Team: Russian <https://hosted.weblate.org/projects/penpot/frontend/"
-"ru/>\n"
+"Language-Team: Russian "
+"<https://hosted.weblate.org/projects/penpot/frontend/ru/>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -304,8 +304,8 @@ msgstr "Дублировать файлы (%s)"
 msgid "dashboard.empty-placeholder-drafts"
 msgstr ""
 "Файлы, добавленные в Библиотеки, появятся здесь. Попробуйте поделиться "
-"своими файлами или добавить их из наших [Библиотек и шаблонов](https://penpot"
-".app/libraries-templates.html)."
+"своими файлами или добавить их из наших [Библиотек и "
+"шаблонов](https://penpot.app/libraries-templates.html)."
 
 msgid "dashboard.export-binary-multi"
 msgstr "Скачать файлы Penpot (.penpot) (%s)"
@@ -390,8 +390,7 @@ msgid "dashboard.fonts.dismiss-all"
 msgstr "Отменить все"
 
 msgid "dashboard.fonts.empty-placeholder"
-msgstr ""
-"Пользовательские шрифты, которые вы загружаете, будут отображаться здесь."
+msgstr "Пользовательские шрифты, которые вы загружаете, будут отображаться здесь."
 
 #: src/app/main/ui/dashboard/fonts.cljs
 msgid "dashboard.fonts.fonts-added"
@@ -2413,6 +2412,12 @@ msgstr "Дизайн"
 msgid "workspace.options.export"
 msgstr "Экспорт"
 
+#: src/app/main/ui/workspace/sidebar/options/menus/exports.cljs, src/app/main/ui/inspect/exports.cljs
+msgid "workspace.options.export-object"
+msgid_plural "workspace.options.export-object"
+msgstr[0] "Экспорт 1 элемента"
+msgstr[1] "Экспорт %s элементов"
+
 #: src/app/main/ui/workspace/sidebar/options/menus/exports.cljs, src/app/main/ui/inspect/exports.cljs, src/app/main/ui/workspace/header.cljs
 msgid "workspace.options.exporting-complete"
 msgstr "Экспорт завершён"
@@ -2983,9 +2988,3 @@ msgstr "Обновить"
 
 msgid "workspace.viewport.click-to-close-path"
 msgstr "Нажмите для замыкания контура"
-
-#: src/app/main/ui/workspace/sidebar/options/menus/exports.cljs, src/app/main/ui/inspect/exports.cljs
-msgid "workspace.options.export-object"
-msgid_plural "workspace.options.export-object"
-msgstr[0] "Экспорт 1 элемента"
-msgstr[1] "Экспорт %s элементов"
