--- a/frontend/translations/en.po
+++ b/frontend/translations/en.po
@@ -3143,11 +3143,11 @@ msgstr "Recent colors"
 
 #: src/app/main/ui/workspace/colorpalette.cljs
 msgid "workspace.libraries.colors.empty-palette"
-msgstr "There are no Color Styles in your Library yet"
+msgstr "There are no color styles in your library yet"
 
 #: src/app/main/ui/workspace/textpalette.cljs
 msgid "workspace.libraries.colors.empty-typography-palette"
-msgstr "There are no Typography Styles in your Library yet"
+msgstr "There are no typography styles in your library yet"
 
 #: src/app/main/ui/workspace/colorpicker.cljs
 msgid "workspace.libraries.colors.rgb-complementary"
